>  - this is because the old command names were pretty confusing/didn't fit well
> - removed `check-first-join` option
>  - this has been merged with the command, which'll show both current and historical members

### stalk market 🥕
> - new patterns! see what they do in </currency shop:1116857516324827148> ⬅️ **🥕 Stalk market** ➡️ **<:currency_shopkeeper_deerie:1136538082875817986> A deer's guide to the stalk market** or below~
>  - `decreasing`: prices slowly decrease
>  - `increasing`: prices slowly increase
>  - `small-spike`: prices decrease with a small bump
>  - `large-spike`: prices decrease with a large bump
>  - `false-spike`: prices decrease with a very small bump
>  - `low-random`: random low prices
>  - `high-random`: random high prices
>  - `starting-mirror`: high starting price, low midweek price, slightly higher ending price
>  - `ending-mirror`: mediocre starting price, low midweek price, high ending price
>  - `peak`: low starting and ending prices, high midweek price

### suggestions ✨
> - removed default reactions ⬆️ ↔️ ⬇️ from new posts

### support ✨
> - log messages relating to the role created to @mention the Moderation Team in tickets (in https://discord.com/channels/977254354589462618/1072945802256855170 and https://discord.com/channels/977254354589462618/1082650454044979210) are now automatically bulk-deleted within 1 minutes
>  - ..however, the "bulk delete" log isn't deleted (it's staying as a rough "reference" as to when tickets get created/deleted i guess)
> - appended "UwU pwease wate us 5 staws" to the support ratings message

## <:happ:906683365791502366> bugs fixed

### <a:slash_command:1148866611227414568> </currency shop:1116857516324827148>
> - fixed a duplicate response when viewing an item from bunny and halo

### support ✨